# ggrl13

./: .gitignore  README.md  nginx.conf  pyproject.toml
ggrl13/: manage.py
ggrl13/ggrl13/: asgi.py  settings.py  urls.py  wsgi.py
ggrl13/simple/: models.py  urls.py  views.py
ggrl13/simple/migrations/: 0001_initial.py
ggrl13/simple/static/simple/js/: dynamic_form.js
ggrl13/simple/templates/simple/: dynamic_form.html  results.html
